Opened 14 years ago
Closed 14 years ago
#1627 closed defect (fixed)
DTS/PTS st:0 invalid dropping out of sync video
| Reported by: | jwjwjw | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | ffmpeg |
| Version: | git-master | Keywords: | regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
Transcoding an mp4 fills the screen with DTS/PTS invalid dropping errors and the resulting video file's audio is out of sync with the video with ffmpeg N-43440-gb2bc48a. The same video transcodes successfully with ffmpeg N-31890-gecaf514.
How to reproduce:
% ffmpeg -i invalid_dropping.mp4 newfile.mp4 ffmpeg version N-43440-gb2bc48a Copyright (c) 2000-2012 the FFmpeg developers built on Aug 10 2012 15:11:02 with gcc 4.4.5 (Debian 4.4.5-8) configuration: --enable-libdc1394 --prefix=/usr --extra-cflags='-Wall -g ' --enable-shared --enable-libmp3lame --enable-gpl --enable-libvorbis --enable-pthreads --enable-libfaac --enable-libxvid --enable-postproc --enable-x11grab --enable-libgsm --enable-libtheora --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libx264 --enable-libspeex --enable-nonfree --disable-stripping --enable-avfilter --enable-libschroedinger --disable-encoder=libschroedinger --enable-version3 --enable-libopenjpeg --enable-libvpx --enable-librtmp --extra-libs=-lgcrypt --disable-altivec --disable-armv5te --disable-armv6 --disable-vis
Sample invalid_dropping.mp4 and full ffmpeg log file attached.
Attachments (2)
Change History (4)
by , 14 years ago
| Attachment: | ffmpeg-20120810-151628.log added |
|---|
comment:1 by , 14 years ago
| Component: | FFmpeg → undetermined |
|---|---|
| Keywords: | regression added; invalid dropping mp4 audio sync removed |
| Priority: | normal → important |
| Reproduced by developer: | set |
| Status: | new → open |
Regression since 29034e6.
comment:2 by , 14 years ago
| Component: | undetermined → FFmpeg |
|---|---|
| Resolution: | → fixed |
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



ffmpeg log